tests/test_assets/semantic/invalid/raw_pointers/pointer_field_precedence.cog
Point :: struct {
    x: i32;
}

test::(point: Point*) -> void {
    *point.x = 1;
}
