tests/test_assets/semantic/invalid/raw_pointers/pointer_field_precedence.expected
semantic error at line 6: field access requires a struct
1 semantic error generated.
